2011-12-14  Anders Carlsson  <andersca@apple.com>

        bind should handle member functions
        https://bugs.webkit.org/show_bug.cgi?id=74529

        Reviewed by Sam Weinig.

        Add tests.

        * TestWebKitAPI/Tests/WTF/Functional.cpp:
        (TestWebKitAPI::A::A):
        (TestWebKitAPI::A::f):
        (TestWebKitAPI::A::addF):
        (TestWebKitAPI::TEST):

2011-12-14  Anders Carlsson  <andersca@apple.com>

        Add unary and binary bind overloads
        https://bugs.webkit.org/show_bug.cgi?id=74524

        Reviewed by Sam Weinig.

        Add tests.

        * TestWebKitAPI/Tests/WTF/Functional.cpp:
        (TestWebKitAPI::TEST):
        (TestWebKitAPI::multiplyByTwo):
        (TestWebKitAPI::multiplyByOneAndAHalf):
        (TestWebKitAPI::multiply):
        (TestWebKitAPI::subtract):

2011-12-14  Holger Hans Peter Freyther  <holger@moiji-mobile.com>

        [Qt] Test fonts are not used with Qt5
        https://bugs.webkit.org/show_bug.cgi?id=72513

        MIPS and SH4 buildfix after r102776 and r102795.

        Reviewed by Csaba Osztrogonác.

        * qmake/mkspecs/features/features.prf:

2011-12-14  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed speculative MIPS and SH4 buildfix after r102776.

        * qmake/mkspecs/features/features.prf:

2011-12-14  Andreas Kling  <kling@webkit.org>

        Make my e-mail address a little more awesome.

        * Scripts/webkitpy/common/config/committers.py:

2011-12-14  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Rollout r102769, because it broke Qt-4.8 builds.

        * qmake/mkspecs/features/webcore.prf:

2011-12-14  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] Test fonts are not used with Qt5
        https://bugs.webkit.org/show_bug.cgi?id=72513

        Reviewed by Simon Hausmann.

        Don't depend on Q_WS_X11 anymore since it's not the Qt5
        way to detect the platform. Make the guards depend