@@ -1,5 +1,13 @@
 2011-12-14  Anders Carlsson  <andersca@apple.com>
 
+        Fix the Windows build.
+
+        Disable some of the tests for now.
+
+        * TestWebKitAPI/Tests/WTF/Functional.cpp:
+
+2011-12-14  Anders Carlsson  <andersca@apple.com>
+
         bind should handle member functions
         https://bugs.webkit.org/show_bug.cgi?id=74529
 
